feat(filter): Create the cohorts and track dropdown for filtering students
This is to provide the feature to filter students on the gradebook by
cohorts or enrollment tracks

--- a/src/components/Gradebook/gradebook.scss
+++ b/src/components/Gradebook/gradebook.scss
@@ -1,3 +1,12 @@
+.student-filters{
+    display: flex;
+    .label{
+        padding-top: 30px;
+    }
+    .form-group{
+        margin-left: 10px;
+    }
+}
 .gbook { 
     overflow-x: scroll;
 
