Show a spinner when waiting for the grades call to come back

--- a/src/components/Gradebook/gradebook.scss
+++ b/src/components/Gradebook/gradebook.scss
@@ -1,3 +1,20 @@
+.spinner-overlay {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: #999;
+    opacity: 0.5;
+    z-index: 99999;
+    display:flex;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 200px;
+}
+
+.color-black {
+    color: black;
+}
+
 .gradebook-container{
     width: 500px;
     @media only screen and (min-width: 640px) {
@@ -10,6 +27,7 @@
         width: 1024px;
     }
 }
+
 .back-link{
     float:right;
 }
