WIP: Add footer.

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,4 @@ $fa-font-path: "~font-awesome/fonts";
 @import "~@edx/paragon/src/SearchField/SearchField";
 
 @import "./components/Gradebook/gradebook";
+@import "./components/Gradebook/footer";
