--- a/src/components/Gradebook/gradebook.scss
+++ b/src/components/Gradebook/gradebook.scss
@@ -1,7 +1,8 @@
 .spinner-overlay {
-    position: absolute;
+    position: fixed;
     height: 100%;
     width: 100%;
+    top: 0;
     background-color: #999;
     opacity: 0.5;
     z-index: 99999;
@@ -28,9 +29,6 @@
     }
 }
 
-.back-link{
-    float:right;
-}
 .student-filters{
     display: flex;
     .label{
