--- a/src/components/Gradebook/footer.scss
+++ b/src/components/Gradebook/footer.scss
@@ -28,64 +28,64 @@ footer {
     margin: 0px;
   }
 
-  .thing-1 {
+  .area-1 {
     grid-column: 1;
     grid-row: 1;
     border-bottom: $border-1;
     padding-bottom: 1rem;
   }
 
-  .thing-2 {
+  .area-2 {
     grid-column: 1;
     grid-row: 2;
     border-bottom: $border-1;
     padding: 1rem 0;
   }
 
-  .thing-3 {
+  .area-3 {
     grid-column: 1;
     grid-row: 3;
     border-bottom: $border-1;
     padding: 1rem 0;
   }
 
-  .thing-4 {
+  .area-4 {
     grid-column: 1;
     grid-row: 4;
     border-bottom: $border-1;
     padding: 1rem 0;
   }
 
-  .thing-5 {
+  .area-5 {
     grid-column: 1;
     grid-row: 5;
     padding: 1rem 0;
   }
 
   @media only screen and (min-width: 717px) {
-    .thing-1 {
+    .area-1 {
       grid-column: 1 / span 2;
       grid-row: 1;
       border-bottom: none;
     }
 
-    .thing-2 {
+    .area-2 {
       grid-column: 1;
       grid-row: 2;
     }
 
-    .thing-3 {
+    .area-3 {
       grid-column: 1;
       grid-row: 3;
     }
 
-    .thing-4 {
+    .area-4 {
       grid-column: 1;
       grid-row: 4;
       border-bottom: none;
     }
 
-    .thing-5 {
+    .area-5 {
       grid-column: 2;
       grid-row: 2 / span 3;
       border-left: $border-1;
@@ -95,7 +95,7 @@ footer {
   }
 
   @media only screen and (min-width: 870px) {
-    .thing-1 {
+    .area-1 {
       grid-column: 1;
       grid-row: 1 / span 3;
       border-right: $border-1;
@@ -103,7 +103,7 @@ footer {
       margin-right: 1rem;
     }
 
-    .thing-2 {
+    .area-2 {
       grid-column: 2;
       grid-row: 1;
       border-bottom: none;
@@ -112,7 +112,7 @@ footer {
       margin-right: 1rem;
     }
 
-    .thing-3 {
+    .area-3 {
       grid-column: 3;
       grid-row: 1;
       border-bottom: none;
@@ -121,12 +121,12 @@ footer {
       margin-right: 1rem;
     }
 
-    .thing-4 {
+    .area-4 {
       grid-column: 4;
       grid-row: 1;
     }
 
-    .thing-5 {
+    .area-5 {
       grid-column: 2 / span 3;
       grid-row: 2;
       border: none;
@@ -136,22 +136,22 @@ footer {
   }
 
   @media only screen and (min-width: 1188px) {
-    .thing-1 {
+    .area-1 {
       grid-column: 1;
       grid-row: 1;
     }
 
-    .thing-2 {
+    .area-2 {
       grid-column: 2;
       grid-row: 1;
     }
 
-    .thing-3 {
+    .area-3 {
       grid-column: 3;
       grid-row: 1;
     }
 
-    .thing-4 {
+    .area-4 {
       grid-column: 4;
       grid-row: 1;
       border-right: $border-1;
@@ -159,7 +159,7 @@ footer {
       margin-right: 1rem;
     }
 
-    .thing-5 {
+    .area-5 {
       grid-column: 5;
       grid-row: 1;
       max-width: 372px;
