--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@ $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
 
 @import "~@edx/paragon/src/SearchField/SearchField";
+@import "./components/Gradebook/gradebook";             
 
 @import "./components/Gradebook/gradebook";
 @import "./components/Gradebook/footer";
