Minor clean-up.

--- a/src/components/Gradebook/footer.scss
+++ b/src/components/Gradebook/footer.scss
@@ -63,6 +63,7 @@ $border-1: 1px solid $gray-200;
       grid-column: 1 / span 2;
       grid-row: 1;
       border-bottom: none;
+      padding: 1rem 0;
     }
 
     .area-2 {
