Added a stub for the Header and initial Nav code including click toggle nav

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,3 +8,5 @@ $fa-font-path: "~font-awesome/fonts";
 
 @import "./components/Gradebook/gradebook";
 @import "./components/Gradebook/footer";
+
+@import './components/Header/header';
