--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,8 +1,79 @@
-.nav-item {
-  .submenu {
-    display: none;
-    &.open {
-      display: block;
+.site-header {
+
+}
+
+@media(min-width: 500px) {
+  .mobile-only {
+    display: none !important;
+  }
+}
+.edx-nav {
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+}
+
+.edx-nav-children {
+  position: relative;
+  transition: all .3s ease;
+  .menu-is-open & {
+    transform: translateX(-100%);
+  }
+
+  @media(min-width: 500px) {
+    display: flex;
+    .menu-is-open & {
+      transform: none;
     }
   }
 }
+
+.nav-menu {
+  .submenu {
+    z-index: 2;
+    background: #ddd;
+    position:absolute;
+    width: 100%;
+    left: 100%;
+    top: 0;
+  }
+
+  // .submenu-enter {
+  //   opacity: 0.01;
+  // }
+  // .submenu-enter-active {
+  //   opacity: 1;
+  // }
+  // .submenu-exit {
+  //   opacity: 1;
+  // }
+  // .submenu-exit-active {
+  //   opacity: 0.01;
+  //   transition: all 300ms ease;
+  // }
+  @media(min-width: 500px) {
+    .submenu {
+      top:100%;
+      left: 0;
+      right: 0;
+      width: auto;
+    }
+    &.open .submenu {
+    }
+  }
+}
+.nav-menu button,
+.nav-item a {
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  text-align: left;
+  padding: .5em;
+  border:0;
+  @media(min-width: 500px) {
+    width: auto;  
+  }
+}
+
