--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,3 +1,14 @@
+
+
+a {
+  text-transform: none;
+  font-weight: 400;
+  color: #2968aa;
+  letter-spacing: -0.03em;
+  display: inline;
+  padding: 0;
+}
+
 .site-header {
   display: flex;
   border-bottom: solid 1px rgba(0,0,0,.1);
@@ -24,7 +35,7 @@
   button.menu-button {
     padding:1em;
   }
-  .menu {
+  .header-menu {
     position: absolute;
     top: 100%;
     left: 0;
@@ -33,41 +44,79 @@
 }
 
 
-
-
 .main-nav {
-  max-width: 100%;
-  position:relative;
-  button, a {
-    display: block;
-    width:100%;
-    text-align: left;
-    border:none;
-    border-bottom: solid 1px #aaa;
-    padding:.5em 1em;
-  }
-  h4 {
-    padding: .5em 1em;
-    font-size: 15px;
-    font-weight: 400;
-  }
+  overflow: hidden;
 
-  .nav-wrap {
+  .main-nav-wrap {
+    display: flex;
     transition: transform .5s ease;
+    .top-level, .submenu {
+      flex-basis: 100%;
+      flex-shrink: 0;
+    }
   }
 
   &.has-expanded-menu {
-    .nav-wrap {
-      transform: translateX(-100%);
+    .main-nav-wrap {
+      transform: translateX(-80%);
     }
   }
-}
-.nav-menu {
-  .nav-menu-content {
-    position:absolute;
-    left: 0;
-    width: 100%;
-    top: 0;
-    transform: translateX(100%);
+  .top-level {
+    .nav-item {
+      display: block;
+    }
+  }
+
+  .submenu {
+    a {
+      display: block;
+    }
+  }
+
+  &.touch-nav {
+    .nav-item {
+      padding: .5em;
+      border-bottom: solid 1px rgba(0,0,0,.1);
+    }
+  }
+
+
+  &.pointer-nav {
+    overflow: auto;
+    .main-nav-wrap {
+      display: block;
+      transition: none;
+    }
+    .top-level {
+      .nav-item {
+        display: inline-block;
+        font-size: 18px;
+        color: #007db8;
+        padding: 1em;
+        border:none;
+        background: none;
+        &.expanded, &:hover {
+          text-decoration: none;
+          color:#fff;
+          background: #007db8;
+        }
+      }
+    }
+
+    .menu {
+      border-bottom:solid 1px rgba(0,0,0,.1);
+      border-top: solid 4px #007db8;
+      padding:1em;
+      h4 {
+        font-size: 18px;
+        font-weight: 700;
+      }
+    }
+
+    &.has-expanded-menu {
+      .main-nav-wrap {
+        transform:none;
+      }
+    }
   }
 }
