--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,64 +1,67 @@
 
-body {
-  background: #ccc;
+// Atom Component Styles
+a.menu-button,
+button.menu-button {
+  display: inline-block;
+  border: none;
+  background: none;
+}
+.menu {
+  position: absolute;
+  background: #fff;
 }
 
-a {
-  text-transform: none;
-  font-weight: 400;
-  color: #2968aa;
-  letter-spacing: -0.03em;
-  display: inline;
-  padding: 0;
-}
+
+// Molecule/Organism Style
 
 .site-header {
-  // border-bottom: solid 1px rgba(0,0,0,.1);
   box-shadow: 0 1px 0 0 rgba(0,0,0,.1);
   background: #fff;
-
   display: flex;
-  
   align-items:center;
   position: relative;
-
-  button.menu-button {
-    padding:1em;
-    background:none;
-    border:none;
-  }
-  
-  .header-logo-container {
-    text-align: center;
-    a {
-      display: inline-block;
-    }
-  }
 
   .secondary-menu {
     display: flex;
     justify-content: flex-end;
   }
+  // button.menu-button {
+  //   padding:1em;
+  //   background:none;
+  //   border:none;
+  // }
+  
+  // .header-logo-container {
+  //   text-align: center;
+  // }
 
-  .header-menu {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    background: #fff;
-    box-shadow: 0 1px 0 0 rgba(0,0,0,.1), inset 0 1px 0 0 rgba(0,0,0,.1);
-    padding: .5em 0;
-    .menu-text {
-      padding:0 1em;
-    }
-    a.nav-item, button {
-      display: block;
-      padding: .5em 1em;
-      width: 100%;
-      text-align: left;
-    }
-  }
+  // .secondary-menu {
+  //   display: flex;
+  //   justify-content: flex-end;
+  // }
+
+  // .header-menu {
+  //   position: absolute;
+  //   top: 100%;
+  //   left: 0;
+  //   right: 0;
+  //   background: #fff;
+  //   box-shadow: 0 1px 0 0 rgba(0,0,0,.1), inset 0 1px 0 0 rgba(0,0,0,.1);
+  //   padding: .5em 0;
+  //   .menu-text {
+  //     padding:0 1em;
+  //   }
+  //   a.nav-item, button {
+  //     display: block;
+  //     padding: .5em 1em;
+  //     width: 100%;
+  //     text-align: left;
+  //   }
+  // }
 }
+
+$blue: #007db8;
+$white: #fff;
 
 .site-header.mobile {
   justify-content: space-between;
@@ -69,99 +72,178 @@ a {
     flex-grow: 1;
     flex-basis:34%;
   }
+
+  .header-logo-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .menu-button {
+    padding: 1rem;
+    line-height: 1;
+  }
+  
+  .primary-menu-button {
+    height: 3rem;
+    width: 3rem;
+    padding: 0;
+    text-align:center;
+    svg {
+      height: 1.25rem;
+      width: 1.25rem;
+    }
+  }
+
+  .menu {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 100%;
+    box-shadow: 0 1px 0 0 rgba(0,0,0,.1), inset 0 1px 0 0 rgba(0,0,0,.1);
+  }
+
+  .main-nav {
+    .nav-item {
+      display: block;
+      padding: .5rem 1rem;
+    } 
+  }
 }
 
 .site-header.desktop {
-  .primary-menu {
-    flex-grow: 1;
-    flex-wrap: nowrap;
-  }
-  .header-logo {
-    padding:0 1rem 0 2rem;
+  padding:0 1rem;
+
+  a.header-logo {
     display: flex;
     align-items:center;
+    padding-right: .5rem;
   }
-}
 
-
-.main-nav {
-  overflow: hidden;
-
-  .main-nav-wrap {
-    display: flex;
-    transition: transform .5s ease;
-    .top-level, .submenu {
-      flex-basis: 100%;
-      flex-shrink: 0;
+  .nav-item {
+    padding: 1.25rem .75rem;
+    line-height: 1;
+    display: inline-block;
+    border: none;
+    &:hover, &.expanded {
+      text-decoration: none;
+      background: $blue;
+      color: $white;
     }
   }
 
-  &.open-submenu-tray {
-    .main-nav-wrap {
-      transform: translateX(-100%);
-    }
-  }
-  .top-level {
-    .nav-item {
-      display: block;
-    }
+  .menu {
+    position: absolute;
+    top: 100%;
+    border-top: solid 4px $blue;
+    box-shadow: 0 1px 0 0 rgba(0,0,0,.1), 1px 0 0 0 rgba(0,0,0,.1), -1px 0 0 0 rgba(0,0,0,.1);
+    padding: 1rem;
   }
 
-  .submenu {
-
-  }
-
-  &.touch-nav {
-
-  }
-
-
-  &.pointer-nav {
-    overflow: auto;
-    .main-nav-wrap {
-      display: block;
-      transition: none;
-    }
-    .top-level {
-      display: flex;
-      & > * {
-        flex-shrink: 0;
-      }
-
-      .nav-item {
-        
-        display: inline-block;
-        font-size: 18px;
-        color: #007db8;
-        padding: 1em;
-        border:none;
-        background: none;
-        &.expanded, &:hover {
-          text-decoration: none;
-          color:#fff;
-          background: #007db8;
-        }
-      }
-    }
-
+  .primary-menu {
+    flex-grow: 1;
+    flex-shrink: 0;
+    position: relative;
     .menu {
-      border-bottom:solid 1px rgba(0,0,0,.1);
-      border-top: solid 4px #007db8;
-      padding:1em;
-      position: absolute;
       left: 0;
-      right: 0;
-      background: #fff;
-      h4 {
-        font-size: 18px;
-        font-weight: 700;
-      }
-    }
-
-    &.open-submenu-tray {
-      .main-nav-wrap {
-        transform:none;
-      }
+      width: 80vw;
+      max-width: 1200px;
     }
   }
+
+  .secondary-menu {
+    position: relative;
+    .menu {
+      right: 0;
+      width: 20rem;
+    }
+  }
+
+  .search-field {
+    align-self: center;
+    margin-right: 1rem;
+  }
 }
+
+
+// .main-nav {
+//   overflow: hidden;
+
+//   .main-nav-wrap {
+//     display: flex;
+//     transition: transform .5s ease;
+//     .top-level, .submenu {
+//       flex-basis: 100%;
+//       flex-shrink: 0;
+//     }
+//   }
+
+//   &.open-submenu-tray {
+//     .main-nav-wrap {
+//       transform: translateX(-100%);
+//     }
+//   }
+//   .top-level {
+//     .nav-item {
+//       display: block;
+//     }
+//   }
+
+//   .submenu {
+
+//   }
+
+//   &.touch-nav {
+
+//   }
+
+
+//   &.pointer-nav {
+//     overflow: auto;
+//     .main-nav-wrap {
+//       display: block;
+//       transition: none;
+//     }
+//     .top-level {
+//       display: flex;
+//       overflow: hidden;
+//       & > * {
+//         flex-shrink: 0;
+//       }
+
+//       .nav-item {
+        
+//         display: inline-block;
+//         font-size: 18px;
+//         color: #007db8;
+//         padding: 1em;
+//         border:none;
+//         background: none;
+//         &.expanded, &:hover {
+//           text-decoration: none;
+//           color:#fff;
+//           background: #007db8;
+//         }
+//       }
+//     }
+
+//     .menu {
+//       border-bottom:solid 1px rgba(0,0,0,.1);
+//       border-top: solid 4px #007db8;
+//       padding:1em;
+//       position: absolute;
+//       left: 0;
+//       right: 0;
+//       background: #fff;
+//       h4 {
+//         font-size: 18px;
+//         font-weight: 700;
+//       }
+//     }
+
+//     &.open-submenu-tray {
+//       .main-nav-wrap {
+//         transform:none;
+//       }
+//     }
+//   }
+// }
