--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,3 +1,7 @@
+$blue: #007db8;
+$white: #fff;
+
+
 
 // Atom Component Styles
 a.menu-button,
@@ -6,6 +10,7 @@ button.menu-button {
   border: none;
   background: none;
 }
+
 .menu {
   position: absolute;
   background: #fff;
@@ -25,43 +30,7 @@ button.menu-button {
     display: flex;
     justify-content: flex-end;
   }
-  // button.menu-button {
-  //   padding:1em;
-  //   background:none;
-  //   border:none;
-  // }
-  
-  // .header-logo-container {
-  //   text-align: center;
-  // }
-
-  // .secondary-menu {
-  //   display: flex;
-  //   justify-content: flex-end;
-  // }
-
-  // .header-menu {
-  //   position: absolute;
-  //   top: 100%;
-  //   left: 0;
-  //   right: 0;
-  //   background: #fff;
-  //   box-shadow: 0 1px 0 0 rgba(0,0,0,.1), inset 0 1px 0 0 rgba(0,0,0,.1);
-  //   padding: .5em 0;
-  //   .menu-text {
-  //     padding:0 1em;
-  //   }
-  //   a.nav-item, button {
-  //     display: block;
-  //     padding: .5em 1em;
-  //     width: 100%;
-  //     text-align: left;
-  //   }
-  // }
 }
-
-$blue: #007db8;
-$white: #fff;
 
 .site-header.mobile {
   justify-content: space-between;
@@ -82,7 +51,7 @@ $white: #fff;
     padding: 1rem;
     line-height: 1;
   }
-  
+
   .primary-menu-button {
     height: 3rem;
     width: 3rem;
@@ -100,6 +69,12 @@ $white: #fff;
     right: 0;
     top: 100%;
     box-shadow: 0 1px 0 0 rgba(0,0,0,.1), inset 0 1px 0 0 rgba(0,0,0,.1);
+
+    padding: 1rem;
+  }
+
+  .main-menu {
+    padding: 0;
   }
 
   .main-nav {
@@ -165,85 +140,37 @@ $white: #fff;
 }
 
 
-// .main-nav {
-//   overflow: hidden;
 
-//   .main-nav-wrap {
-//     display: flex;
-//     transition: transform .5s ease;
-//     .top-level, .submenu {
-//       flex-basis: 100%;
-//       flex-shrink: 0;
-//     }
-//   }
+.main-nav.touch-nav {
+  overflow: hidden;
 
-//   &.open-submenu-tray {
-//     .main-nav-wrap {
-//       transform: translateX(-100%);
-//     }
-//   }
-//   .top-level {
-//     .nav-item {
-//       display: block;
-//     }
-//   }
+  .main-nav-wrap {
+    display: flex;
+    transition: transform .5s ease;
+    .top-level, .submenu {
+      flex-basis: 100%;
+      flex-shrink: 0;
+    }
+  }
 
-//   .submenu {
+  &.open-submenu-tray {
+    .main-nav-wrap {
+      transform: translateX(-100%);
+    }
+  }
 
-//   }
+  .submenu {
+    .menu {
+      background: none;
+      position: static;
+      box-shadow: none;
+    }
+  }
 
-//   &.touch-nav {
-
-//   }
-
-
-//   &.pointer-nav {
-//     overflow: auto;
-//     .main-nav-wrap {
-//       display: block;
-//       transition: none;
-//     }
-//     .top-level {
-//       display: flex;
-//       overflow: hidden;
-//       & > * {
-//         flex-shrink: 0;
-//       }
-
-//       .nav-item {
-        
-//         display: inline-block;
-//         font-size: 18px;
-//         color: #007db8;
-//         padding: 1em;
-//         border:none;
-//         background: none;
-//         &.expanded, &:hover {
-//           text-decoration: none;
-//           color:#fff;
-//           background: #007db8;
-//         }
-//       }
-//     }
-
-//     .menu {
-//       border-bottom:solid 1px rgba(0,0,0,.1);
-//       border-top: solid 4px #007db8;
-//       padding:1em;
-//       position: absolute;
-//       left: 0;
-//       right: 0;
-//       background: #fff;
-//       h4 {
-//         font-size: 18px;
-//         font-weight: 700;
-//       }
-//     }
-
-//     &.open-submenu-tray {
-//       .main-nav-wrap {
-//         transform:none;
-//       }
-//     }
-//   }
-// }
+  
+  .top-level {
+    .nav-item {
+      display: block;
+    }
+  }
+}
