--- a/src/App.scss
+++ b/src/App.scss
@@ -9,3 +9,4 @@ $fa-font-path: "~font-awesome/fonts";
 
 @import "./components/Gradebook/gradebook";
 @import "./components/Gradebook/footer";
+@import "./components/Header/header";
