--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -14,3 +14,11 @@
         margin-left: 4px;
     }
 }
+
+.color-gray {
+    color: #767676;
+}
+
+.justify-self-start {
+    justify-self: start !important;
+}
