--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -161,12 +161,109 @@ $white: #fff;
     padding: .5*$spacer $spacer;
   }
 
+  .primary-menu-container {
+    .menu-content {
+      width: 100%;
+      left: 100%;
+      top: 0;
+    }
+  }
+  .slide-panel {
+
+  }
+  .panels {
+    width: 100%;
+    transition: transform .4s ease;
+  }
+  .panel-open .panels {
+    transform: translateX(-100%);
+  }
 }
 
 
 
 
+.overlay-panel-menu {
 
+  & > .menu-content {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1000;
+    overflow: hidden;
+    background: transparent;
+    box-shadow: none;
+
+    & > .menu-content-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      z-index: 1;
+      background:#fff;
+      bottom: 0;
+      width: calc(100vw - 50px);
+      overflow: auto;
+      box-shadow: none;
+      transition: all .5s ease;
+    }
+
+    .overlay-close {
+      width: 100%;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0,0,0,.5);
+      border: none;
+      // opacity: 0;
+      transition: all .5s ease;
+    }
+
+    &.overlay-panel-enter {
+      & > .menu-content-container {
+        transform: translateX(-100%);
+      }
+      .overlay-close {
+        opacity: 0.01;
+      }
+    }
+    &.overlay-panel-enter-active {
+      & > .menu-content-container {
+        transform: translateX(0%);
+        transition: transform 300ms ease-out;
+      }
+      .overlay-close {
+        opacity: 1;
+        transition: opacity 300ms linear;
+      }
+    }
+
+    &.overlay-panel-exit {
+      & > .menu-content-container {
+        transform: translateX(0%);
+      }
+      .overlay-close {
+        opacity: 1;
+      }
+    }
+    &.overlay-panel-exit-active {
+      & > .menu-content-container {
+        transform: translateX(-100%);
+        transition: transform 300ms ease-out;
+      }
+      .overlay-close {
+        opacity: 0;
+        transition: opacity 300ms linear;
+      }
+    }
+  }
+
+
+}
 
 
 
@@ -237,28 +334,28 @@ $white: #fff;
 
 
 
-// COMMON
-.slide-panel {
-  width: 100%;
-  overflow: hidden;
-  .panels {
-    width: 100%;
-    display: flex;
-    transition: transform .5s ease;
-  }
-  .panel {
-    width: 100%;
-    flex-shrink: 0;
-  }
-  &.panel-open {
-    .panels {
-      transform: translateX(-100%);
-    }
-  }
-  .panel-content {
-    padding: 1rem;
-  }
-}
+// // COMMON
+// .slide-panel {
+//   width: 100%;
+//   overflow: hidden;
+//   .panels {
+//     width: 100%;
+//     display: flex;
+//     transition: transform .5s ease;
+//   }
+//   .panel {
+//     width: 100%;
+//     flex-shrink: 0;
+//   }
+//   &.panel-open {
+//     .panels {
+//       transform: translateX(-100%);
+//     }
+//   }
+//   .panel-content {
+//     padding: 1rem;
+//   }
+// }
 
 
 
